Users can see single events

--- a/views/events-index.handlebars
+++ b/views/events-index.handlebars
@@ -10,7 +10,8 @@
                     <p class="card-text">{{this.desc}}</p>
                      <div class="text-right">
                          <a href="#" class="btn btn-info">Rsvp</a>
-                         <a href="#" class="btn btn-primary">View</a>
+                         <!-- views/events-index.handlebars -->
+                         <a href="/events/{{this.id}}" class="btn btn-primary">View</a>
                      </div>
                     </div>
                    </div>
