--- a/views/events-show.handlebars
+++ b/views/events-show.handlebars
@@ -2,6 +2,9 @@
 
 <div class="row mt-4">
   <div class="col-lg-6 offset-lg-3">
+    <div class="text-right">
+      <a href="/events/{{event.id}}/edit">Edit</a>
+    </div>
     <img class="img-fluid w-100 rounded mb-3" src="{{event.imgUrl}}" alt="Card image cap">
     <h3>{{event.title}}</h3>
     <div class="lead">{{event.desc}}</div>
