--- a/views/events-index.handlebars
+++ b/views/events-index.handlebars
@@ -9,7 +9,8 @@
                     <h5 class="card-title">{{this.title}}</h5>
                     <p class="card-text">{{this.desc}}</p>
                      <div class="text-right">
-                         <a href="#" class="btn btn-info">Rsvp</a>
+                         <a href="/events/{{this.id}}/rsvps/new" class="btn btn-info">Rsvp</a>
+
                          <!-- views/events-index.handlebars -->
                          <a href="/events/{{this.id}}" class="btn btn-primary">View</a>
                      </div>
