--- a/views/events-show.handlebars
+++ b/views/events-show.handlebars
@@ -1,6 +1,15 @@
 <!-- views/events-show.handlebars -->
 
 <div class="row mt-4">
+    <div class="col-lg-6">
+        <img class="img-fluid w-100 rounded mb-3" src="{{event.imgUrl}}" alt="Card image cap">
+[bold]        <small class="text-muted">Created on: {{event.createdAtFormatted}}</small>[/bold]
+        <h3>{{event.title}}</h3>
+        <div class="lead">{{event.desc}}</div>
+        <div class="text-right">
+            <a href="/events/{{event.id}}/edit">Edit</a>
+        </div>
+    </div>
     <div class="text-right">
       <a href="/events/{{event.id}}/edit">Edit</a>
     </div>
